[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lifehacks"
version = "0.0.0"
authors = [
  { name="mightbesimon" },
]
description = "metaclass for metaclasses"
readme = "README.md"
license = { file="LICENSE.md" }
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
    "Typing :: Typed",
]

[project.urls]
"Homepage" = "https://mightbesimon.com"
"Documentation" = "https://github.com/mightbesimon/lifehacks"
"Source Code" = "https://github.com/mightbesimon/lifehacks"
