[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'lifehacks'
version = '1.0.0'
authors = [
  { name='mightbesimon' },
]
description = 'lifehacks language extension by mightbesimon.com'
readme = 'README.md'
license = { file='LICENSE.md' }
requires-python = '>=3.7'
classifiers = [
    'Intended Audience :: Developers',
    'License :: Other/Proprietary License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Topic :: Software Development',
    'Typing :: Typed',
]
dependencies = [
  'lifehacks.metaclasses',
  'lifehacks.objects',
  'lifehacks.colour',
]

[project.urls]
'Homepage' = 'https://mightbesimon.com'
'Source Code' = 'https://github.com/mightbesimon/lifehacks'
'Documentation' = 'https://github.com/mightbesimon/lifehacks'
